# hunknote

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  build_plan.md  hunknote.spec  pyproject.toml
.github/workflows/: build-release.yml
aicommit/: __main__.py  cache.py  cli.py  config.py  formatters.py  git_ctx.py  global_config.py  llm.py  user_config.py
aicommit/llm/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  google_provider.py  groq_provider.py  mistral_provider.py  openai_provider.py  openrouter_provider.py
docs/: COMPOSE_AGENT_BUILD_PLAN.md  COMPOSE_AGENT_EVAL_BUILD_PLAN.md  COMPOSE_AGENT_EVAL_PLAN.md  FEATURES.md  MIGRATION_PLAN.md  architecture.md  build_plan.md  caching_plan.md  distribution_plan.md  features.md  git_subcommand_fix.md  migration_summary.md  multi_llm_support_plan.md  phase1_2_implementation_summary.md  phase3_implementation_summary.md  pypi_distribution.md  pypi_quick_guide.md  release_checklist.md
eval/: README.md  __init__.py  __main__.py  analysis.py  cli.py  config.py  environment.py  generator.py  harness.py  judge.py  models.py  registry.py  reporting.py  scoring.py  validation.py
eval/test_cases/: httpx_commit_pairs.json  rich_commit_pairs.json
homebrew/: README.md
homebrew/Formula/: hunknote.rb
hunknote/: __init__.py  __main__.py  cache.py  cli.py  compose.py  config.py  formatters.py  git_ctx.py  global_config.py  scope.py  styles.py  user_config.py
hunknote/cache/: __init__.py  compose.py  message.py  models.py  paths.py  utils.py
hunknote/cli/: __init__.py  commit.py  compose.py  config.py  ignore.py  init.py  main.py  style.py  utils.py
hunknote/compose/: __init__.py  agent.py  checkpoint.py  cleanup.py  executor.py  graph.py  grouping.py  inventory.py  litellm_adapter.py  messenger.py  models.py  parser.py  patch.py  planner.py  prompt.py  react_agent.py  relationships.py  symbols.py  validation.py
hunknote/git/: __init__.py  branch.py  context.py  diff.py  exceptions.py  merge.py  runner.py  status.py
hunknote/llm/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  exceptions.py  google_provider.py  groq_provider.py  litellm_provider.py  mistral_provider.py  openai_provider.py  openrouter_provider.py  parsing.py
hunknote/styles/: __init__.py  config.py  constants.py  inference.py  models.py
integration_tests/: README.md  test_compose_coherence.py  test_reexport_coherence.py
integration_tests/data/: c_change_struct_header.json  go_add_field_proto_handler_test.json  go_bidirectional_rename_with_tests.json  go_grpc_circular_3_service_rename.json  go_rename_interface_method.json  java_rename_method_impl_test.json  py_large_refactor_class_rename_20_consumers.json  py_microservices_5_rename_chains.json  python_add_required_param_reexport.json  python_base_class_change_subclasses_tests.json  python_compose_agent_51_hunks.json  python_enum_cascade_with_config.json  python_keyring_migration_real_world.json  python_mixed_feature_refactor_docstring.json  python_remove_function_test_import.json  python_rename_exception_multi_consumer.json  python_rename_function_across_files.json  python_three_coupled_groups_with_noise.json  python_three_file_transitive_chain.json  python_two_independent_features.json  ruby_rename_method_spec.json  rust_rename_trait_method.json  ts_monorepo_type_rename_cascade.json  typescript_api_migration_multi_consumer_test.json  typescript_change_interface_barrel.json  typescript_react_context_change.json  (+2 more)
scripts/: build.sh  build_install.sh  generate_hyper_hard_cases.py  install.sh  test_compose_checkpoints.py
test_folder/: test_file.py
tests/: README.md  __init__.py  conftest.py  test_cache.py  test_checkpoint.py  test_cli.py  test_compose.py  test_compose_agent.py  test_compose_relationships.py  test_config.py  test_extractors.py  test_formatters.py  test_git_ctx.py  test_global_config.py  test_grouping.py  test_hunk_graph.py  test_litellm_adapter.py  test_litellm_provider.py  test_llm_base.py  test_llm_providers.py  test_messenger.py  test_react_agent.py  test_react_subagents.py  test_sanitize_and_tools.py  test_scope.py  test_styles.py  test_symbols.py  test_user_config.py  test_xref.py
(+50 files in other folders)
