[tool.poetry]
name = "aicommit"
version = "0.1.0"
description = "AI-powered git commit message generator using LLMs"
authors = ["AI Commit Generator"]
readme = "README.md"
packages = [{include = "aicommit"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
pydantic = "^2.5.0"
python-dotenv = "^1.2.1"
# LLM Provider SDKs
anthropic = "^0.78.0"
openai = "^1.0.0"
google-genai = "^1.0.0"
mistralai = "^1.0.0"
cohere = "^5.0.0"
groq = "^0.9.0"

[tool.poetry.scripts]
aicommit = "aicommit.cli:app"
git-aicommit = "aicommit.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
