[tool.poetry]
name = "hunknote"
version = "1.6.7"
description = "AI-powered git commit message generator with multi-LLM support"
authors = ["Avinash Ranganath <nash911@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nash911/hunknote"
repository = "https://github.com/nash911/hunknote"
documentation = "https://github.com/nash911/hunknote#readme"
keywords = ["git", "commit", "ai", "llm", "cli", "anthropic", "openai", "gemini", "commit-message", "hunknote"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
packages = [{include = "hunknote"}]
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
#typer = "^0.23.0"
typer = "0.21.2"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"
pyyaml = "^6.0.3"
# LLM Provider SDKs
anthropic = "^0.79.0"
openai = "^2.20.0"
google-genai = "^1.63.0"
mistralai = "^1.12.2"
cohere = "^5.20.5"
groq = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.19.0"

[tool.poetry.scripts]
hunknote = "hunknote.cli:app"
git-hunknote = "hunknote.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
